# Buonaiuto-Doc4LLM

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.agents.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.bat  run.sh
alembic/: env.py  script.py.mako
alembic/versions/: 0001_control_plane.py
docs/architecture/: plan.md
docs_center/projects/: docs-center.json  documentation_llms.json  frontend-app.json
frontend/: package-lock.json  package.json
specs/: 2026-04-17-mcp-interaction-log-design.md  2026-04-22-mcp-http-transport-design.md
src/api/: __init__.py  (+4 more)
tests/: test_alembic_migration_contract.py  test_api_admin.py  test_api_mcp_http.py  test_api_service.py  test_api_webhooks.py  test_bugfixes_wave2.py  test_chunker.py  test_cli_install_project.py  test_control_abuse.py  test_control_api_keys.py  test_control_auth.py  test_control_billing.py  test_control_quotas.py  test_control_webhooks_outbound.py  test_control_workspaces.py  test_dashboard.py  test_dashboard_project_log.py  test_doc_discovery.py  test_embedder.py  test_embedder_resilience.py  test_eval.py  test_feedback.py  test_fetch_all_resilience.py  test_fetch_cli.py  test_fetch_docs_integration.py  test_fetch_linked_pages.py  test_fetcher_discovery.py  test_http_fetcher.py  test_indexer.py  test_ingestion_fetcher.py  test_ingestion_scheduler.py  test_ingestion_trust.py  test_interaction_log_store.py  test_locale_detection.py  test_mcp_auto_install.py  test_mcp_http_transport.py  test_mcp_initialize_bootstrap.py  test_mcp_server.py  test_model_provider.py  test_model_provider_ollama.py  (+23 more)
(+72 files in other folders)
