[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "buonaiuto-doc4llm"
version = "0.1.0"
description = "Buonaiuto Doc4LLM — reliable, version-aware documentation retrieval for LLMs"
requires-python = ">=3.11"

[project.optional-dependencies]
fetch = ["requests>=2.31"]
dashboard = ["fastapi>=0.115", "uvicorn>=0.30", "jinja2>=3.1", "python-multipart>=0.0.9"]
embeddings-ollama = ["requests>=2.31"]
embeddings-st = ["sentence-transformers>=2.7"]
qdrant = ["qdrant-client>=1.9"]
all = [
    "requests>=2.31",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "sentence-transformers>=2.7",
    "qdrant-client>=1.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

